--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@ dddd
 <!-- Sticky Navbar -->
 <div class="topofpage">
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><<a href="index.html" class="navhere">Home</a> 
+	<li><<a href="local.html">Local</a> 
+    	<li><<a href="biz.html">Biz</a> 
+        <li><<a href="nation.html">Nation</a> 
+        <li><<a href="sports.html">Sports</a> 
+    	<li><<a href="entertainment.html">Entertainment</a>
+    	<li><<a href="life.html">Life</a> 
+    	<li><<a href="homes.html">Homes</a> 
+    	<li><<a href="opinion.html">Opinion</a> 
     </ul>
 </div>
 
