--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
 dddd
+
+</head>
+<body>
+    <div class="outer">
+        <div class="page">
+            <!-- Header Image -->
+            <img src="seattlelogo-2.png" alt="Seattle Times Logo" class="header">	
 <!-- Sticky Navbar -->
 <div class="topofpage">
     <ul>
