--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@ dddd
     </ul>
 </div>
 
+<!-- Image Tiles Section -->
+<div class="image-tiles">
+        <div class="tile"><img src="local.jpg" alt="Local"></div>
+        <div class="tile"><img src="biz.jpg" alt="Biz"></div>
+        <div class="tile"><img src="nation.jpg" alt="Nation"></div>
+        <div class="tile"><img src="sports.jpg" alt="Sports"></div>
+        <div class="tile"><img src="entertainment.jpg" alt="Entertainment"></div>
+        <div class="tile"><img src="life.jpg" alt="Life"></div>
+	<div class="tile"><img src="homes.jpg" alt="Homes"></div>
+	<div class="tile"><img src="opinion.jpg" alt="Opinion"></div>
+    </div>
+
 <!--Basic Template -->
 <div class="outer">
 	<div class="page">
