--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>basic template</title>
+	<title>Seattle Times</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
