--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!doctype html>
 <html>
 <head>
-	<title>basic template</title>
+	<title>Seattle Times</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="outer">
+        <div class="page">
+            <!-- Header Image -->
+            <img src="seattlelogo.png" alt="Seattle Times Logo" class="header">
+
+</head>
+<body>
+<div class="nav">
+    <a href="index.html" class="navhere">Home</a> 
+    <a href="local.html">Local</a> 
+    <a href="biz.html">Biz</a> 
+    <a href="nation.html">Nation</a> 
+    <a href="sports.html">Sports</a> 
+    <a href="entertainment.html">Entertainment</a>
+    <a href="life.html">Life</a> 
+    <a href="homes.html">Homes</a> 
+    <a href="opinion.html">Opinion</a> 
+</div>
 dddd
 <!-- Sticky Navbar -->
 <div class="topofpage">
@@ -20,7 +39,6 @@ dddd
 <!--Basic Template -->
 <div class="outer">
 	<div class="page">
-      inside page 2
 	</div>
 </div>
 <!--Basic Template -->
