--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="outer">
         <div class="page">
             <!-- Header Image -->
-            <img src="seattlelogo.png" alt="Seattle Times Logo" class="header">
+            <img src="seattlelogo-2.png" alt="Seattle Times Logo" class="header">
 
 </head>
 <body>
