--- a/index.html
+++ b/index.html
@@ -12,27 +12,17 @@
             <!-- Header Image -->
             <img src="seattlelogo-2.png" alt="Seattle Times Logo" class="header">
 
-</head>
-<body>
-<div class="nav">
-    <a href="index.html" class="navhere">Home</a> 
-    <a href="local.html">Local</a> 
-    <a href="biz.html">Biz</a> 
-    <a href="nation.html">Nation</a> 
-    <a href="sports.html">Sports</a> 
-    <a href="entertainment.html">Entertainment</a>
-    <a href="life.html">Life</a> 
-    <a href="homes.html">Homes</a> 
-    <a href="opinion.html">Opinion</a> 
-</div>
-dddd
 <!-- Sticky Navbar -->
 <div class="topofpage">
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="local.html">Local</a></li>
+        <li><a href="biz.html">Biz</a></li>
+        <li><a href="nation.html">Nation</a></li>
+        <li><a href="sports.html">Sports</a></li>
+	<li><a href="entertainment.html">Entertainment</a></li>
+	<li><a href="life.html">Life</a></li>
+	<li><a href="homes.html">Homes</a></li>
+	<li><a href="opinion.hml">Opinion</a></li>
     </ul>
 </div>
 
