--- a/index.html
+++ b/index.html
@@ -32,14 +32,38 @@
 	</div>
 </div>
     <div class="image-tiles">
-        <div class="tile"><img src="local.jpg" alt="Image 1"></div>
-        <div class="tile"><img src="biz.jpg" alt="Image 2"></div>
-        <div class="tile"><img src="nation.jpg" alt="Image 3"></div>
-        <div class="tile"><img src="sports.jpg" alt="Image 4"></div>
-        <div class="tile"><img src="entertainment.jpg" alt="Image 5"></div>
-        <div class="tile"><img src="life.jpg" alt="Image 6"></div>
-	<div class="tile"><img src="homes.jpg" alt="Image 7"></div>
-	<div class="tile"><img src="opinion.jpg" alt="Image 8"></div>
+         <div class="image-tiles">
+                <div class="tile">
+                    <img src="local.jpg" alt="Image 1">
+                    <div class="overlay">Local News</div>
+                </div>
+                <div class="tile">
+                    <img src="biz.jpg" alt="Image 2">
+                    <div class="overlay">Business</div>
+                </div>
+                <div class="tile">
+                    <img src="nation.jpg" alt="Image 3">
+                    <div class="overlay">Nation</div>
+                </div>
+                <div class="tile">
+                    <img src="sports.jpg" alt="Image 4">
+                    <div class="overlay">Sports</div>
+                </div>
+                <div class="tile">
+                    <img src="entertainment.jpg" alt="Image 5">
+                    <div class="overlay">Entertainment</div>
+                </div>
+                <div class="tile">
+                    <img src="life.jpg" alt="Image 6">
+                    <div class="overlay">Life</div>
+                </div>
+                <div class="tile">
+                    <img src="homes.jpg" alt="Image 7">
+                    <div class="overlay">Homes</div>
+                </div>
+                <div class="tile">
+                    <img src="opinion.jpg" alt="Image 8">
+                    <div class="overlay">Opinion</div>
     		</div>
 	</div>
 </div>
